Upgrade Minecraft version to 26.1.2